[package]
name = "journaled"
authors = ["David Freese"]
version = "0.0.1"
edition = "2021"
repository = "https://github.com/dfreese/journaled"
license = "MIT OR Apache-2.0"
description = "An low-level interface for the systemd journal"

[dependencies]
nix = { version = "0.26", features = ["fs"] }
log = { version = "0.4", features = ["std"], optional = true }
once_cell = { version = "1", optional = true }
slog = { version = "2.7", optional = true }

[features]
stdlog = ["dep:log", "dep:once_cell"]
slog = ["dep:slog"]

[dev-dependencies]
criterion = "0.4"
libsystemd = "0.6"

[[bench]]
name = "compare"
harness = false
